# ReaConvert

./: .gitmodules  CMakeLists.txt  README.md
include/: ReaConvert_LoadAPI.h  RppParser.h  RppWriter.h
include/common/: ProjectInfo.h  ProjectParser.h  ProjectWriter.h  ReaConvUtils.h
reaper_sdk/: reaper_plugin.h  reaper_plugin_functions.h
src/: ReaConvert_LoadAPI.cpp  RppParser.cpp  RppWriter.cpp
